# consumables_orderer

./: CMakeLists.txt  README.md  default.nix  fetchNixpkgs.nix  package.xml  release.nix  setup.py
launch/: consumables_orderer.launch
scripts/: consumables_orderer.py  create_objective.py  kuka_buy_consumables_objective.bag
